# pylama

./: .buildinfo  .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-hooks.yaml  .travis.yml  AUTHORS  Changelog  DESCRIPTION  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  _config.yml  dummy.py  genindex.html  index.html  index.md  objects.inv  pylama.ini  requirements-test.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_pylama.py  tests.py  tox.ini
.github/: dependabot.yml
.github/workflows/: docs.yml  release.yml  tests.yml
_layouts/: default.html
_static/: documentation_options.js
docs/: badges.rst  conf.py  configuration.rst  contents.rst  index.html  index.rst  installation.rst  modeline.rst  quickstart.rst  requirements.txt
pylama/: __init__.py  __main__.py  async.py  check_async.py  config.py  config_toml.py  context.py  core.py  errors.py  hook.py  inirama.py  main.py  mccabe.py  pep8.py  pytest.py  tasks.py  utils.py
pylama/checkers/: mccabe.py
pylama/checkers/closure_linter/: aliaspass.py  aliaspass_test.py  checker.py  checkerbase.py  closurizednamespacesinfo.py  closurizednamespacesinfo_test.py  ecmalintrules.py  ecmametadatapass.py  error_fixer.py  error_fixer_test.py  errorrecord.py  errorrules.py  errorrules_test.py  errors.py  fixjsstyle.py  fixjsstyle_test.py  full_test.py  gjslint.py  indentation.py  javascriptlintrules.py  javascriptstatetracker.py  javascriptstatetracker_test.py  javascripttokenizer.py  javascripttokens.py  not_strict_test.py  requireprovidesorter.py  runner.py  testutil.py  (+8 more)
pylama/libs/: inirama.py
pylama/lint/: __init__.py  extensions.py  pylama_eradicate.py  pylama_fake.py  pylama_mccabe.py  pylama_mypy.py  pylama_pep8.py  pylama_pycodestyle.py  pylama_pydocstyle.py  pylama_pyflakes.py  pylama_pylint.py  pylama_radon.py  pylama_vulture.py
pylama/pyflakes/: checker.py
requirements/: requirements-tests.txt  requirements.txt
tests/: conftest.py  test_config.py  test_config_toml.py  test_context.py  test_core.py  test_linters.py  test_shell.py  test_vcs.py
(+42 files in other folders)
