[wheel]
python-tag = py3

[metadata]
name = pylama
version = attr: pylama.__version__
url = https://github.com/klen/pylama
description = Code audit tool for python
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = qa, linter, pydocstyle, pycodestyle, mccabe, pylint
project_urls =
    Documentation = https://klen.github.io/pylama
    Source code = https://github.com/klen/pylama
    Issue tracker = https://github.com/klen/pylama/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
packages = pylama
python_requires = >= 3.7
include_package_data = True

[options.package_data]
pylama =
    py.typed

[options.entry_points]
console_scripts =
    pylama = pylama.main:shell
pytest11 =
    pylama = pylama.pytest

[tool:pytest]
addopts = -xsv

[pylama]
async = 1
ignore = D203,D213,F0401,C0111,E731,I0011
linters = pycodestyle,pyflakes,mccabe,pydocstyle,pylint,mypy
skip = pylama/inirama.py,pylama/libs/*
verbose = 0
max_line_length = 100

[pylama:pyflakes]
builtins = _

[pylama:pylint]
ignore=R,E1002,W0511,C0103,C0204,W0012

[pylama:pylama/core.py]
ignore = C901,R0914

[pylama:pylama/main.py]
ignore = R0914,W0212,C901,E1103

[pylama:tests/*]
ignore = D,C,W,E1103

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py37,py38,py39,py310

[testenv]
deps = -e .[tests]
commands=
    pylama pylama
    pytest --pylama pylama {posargs}
    pytest tests -s {posargs}
